<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/RLHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <LinearLayout
                android:id="@+id/subtractEllipse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/subtractelipse"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/plus_jakarta_sans_extrabold"
                    android:text="@string/cancer_detection"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/powered_by"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/subtract"
                android:orientation="vertical"
                android:layout_below="@id/subtractEllipse"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-90dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/plus_jakarta_sans_extrabold"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="@color/dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/upload"
                    android:textAlignment="center"
                    android:textColor="@color/dark"
                    android:textSize="13sp" />

                <ImageButton
                    android:id="@+id/galleryButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_bg"
                    android:src="@drawable/baseline_upload_file_24"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/preview"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/plus_jakarta_sans_extrabold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/RLHeader"
            />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPreview"
            app:layout_constraintVertical_bias="0.0"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/undraw_conceptual_idea_xw7k" />

        <Button
            android:id="@+id/analyzeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/plus_jakarta_sans_extrabold"
            android:text="@string/analyze"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

